
<resources>
    <string name="app_name">AdvancedAndroidLearningProgram</string>

    <string name="title_draw_color">drawColor()</string>
    <string name="title_draw_circle">drawCircle()</string>
    <string name="title_draw_rect">drawRect()</string>
    <string name="title_draw_point">drawPoint()</string>
    <string name="title_draw_oval">drawOval()</string>
    <string name="title_draw_line">drawLine()</string>
    <string name="title_draw_round_rect">drawRoundRect()</string>
    <string name="title_draw_arc">drawArc()</string>
    <string name="title_draw_path">drawPath()</string>
    <string name="title_draw_histogram">直方图</string>
    <string name="title_draw_pie_chart">饼图</string>
    <string name="custom_view_demo">自定义Demo</string>
    <string name="custom_view_demo2">Paint 详解</string>


    <string name="phone">打电话</string>
    <string name="contacts">联系人</string>
    <string name="collection">收藏</string>

    <string name="phone1">1</string>
    <string name="phone2">2</string>
    <string name="phone3">3</string>
    <string name="phone4">4</string>
    <string name="phone5">5</string>
    <string name="phone6">6</string>
    <string name="phone7">7</string>
    <string name="phone8">8</string>
    <string name="phone9">9</string>
    <string name="phone0">0</string>

    <string name="phonexin">*</string>
    <string name="phonejin">#</string>




</resources>
